# Notificate-example

./: .gitignore  Dockerfile  Dockerfile.bot  README.md  docker-compose.yaml  pyproject.toml
src/app/: config.py  main.py
src/app/api/: order.py
src/app/static/: index.html
src/bot_worker/: Dockerfile  config.py  main.py
src/broker/: rabbit.py
